fixing accordion for correct bootstrap version. Now all panels but one will be collapsed.

--- a/angular_example/app/styles/main.scss
+++ b/angular_example/app/styles/main.scss
@@ -75,8 +75,16 @@ body {
     margin: 20px auto;
 }
 
+.accordion-toggle {
+    background: #F5F5F5;
+}
+
 .inner-accordion {
     margin-left: 20px;
+}
+
+.inner-accordion .accordion-toggle {
+    background: #F5F5FF
 }
 
 .modal-photo {
